adding marker elements

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>Colored Markers</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1>CSS Color Markers</h1>
+    <div class="container">
+      <div class="marker one"></div>
+      <div class="marker two"></div>
+      <div class="marker three"></div>
+    </div>
+  </body>
 </html>
